ingress/ingress-class-example.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: external-lb
spec:
  controller: example.com/ingress-controller
  parameters: ## spec.parameters are related to another resource that provides configuration.
    apiGroup: k8s.example.com
    kind: IngressParameters
    name: external-lb
