ingress/ingress-without-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-without-rules
spec:
  defaultBackend:
    service:
      name: test
      port:
        number: 80
